# cmake-config-example

./: .dir-locals.el  CMakeLists.txt  README.md
external_lib/my_lib/: CMakeLists.txt
external_lib/my_lib/pkg/: my_lib-config.cmake.in
src/: main.cpp
